grafana/loki/generated/grafana-loki/templates/promtail/daemonset.yaml
---
# Source: grafana-loki/templates/promtail/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: grafana-promtail
  namespace: "grafana-loki"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana-loki
    app.kubernetes.io/version: 3.1.0
    helm.sh/chart: grafana-loki-4.6.9
    app.kubernetes.io/part-of: grafana-loki
    app.kubernetes.io/component: promtail
spec:
  updateStrategy:
    rollingUpdate: null
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: grafana-loki
      app.kubernetes.io/part-of: grafana-loki
      app.kubernetes.io/component: promtail
  template:
    metadata:
      annotations:
        checksum/config: ade07d577c5ddad21ab0ca708640846786cf7e27352029227b3ecdc9e45f3443
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: grafana-loki
        app.kubernetes.io/version: 3.1.0
        helm.sh/chart: grafana-loki-4.6.9
        app.kubernetes.io/part-of: grafana-loki
        app.kubernetes.io/component: promtail
    spec:
      serviceAccountName: grafana-promtail
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/name: grafana-loki
                    app.kubernetes.io/component: promtail
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 0
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      enableServiceLinks: true
      containers:
        - name: promtail
          image: docker.io/bitnami/promtail:3.1.0-debian-12-r2
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 0
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          args:
            - -config.file=/bitnami/promtail/conf/promtail.yaml
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9095
              name: grpc
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /ready
              port: http
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: loki-config
              mountPath: /bitnami/promtail/conf/promtail.yaml
              subPath: promtail.yaml
            - name: containers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
            - name: run
              mountPath: /run/promtail
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: loki-config
          secret:
            secretName: grafana-promtail
        - name: containers
          hostPath:
            path: /var/lib/docker/containers
        - name: pods
          hostPath:
            path: /var/log/pods
        - name: run
          hostPath:
            path: /run/promtail
